[gd_scene load_steps=3 format=3 uid="uid://c6s7p0v0q1k2x"]

[ext_resource type="Script" path="res://scripts/Prologue.gd" id="1_xxx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xxx"]
bg_color = Color(0.1, 0.1, 0.1, 0.8)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.8, 0.8, 0.8, 1)

[node name="Prologue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xxx")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="DialoguePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -250.0
offset_right = -64.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_xxx")

[node name="SpeakerLabel" type="Label" parent="DialoguePanel"]
layout_mode = 1
offset_left = 32.0
offset_top = -32.0
offset_right = 232.0
offset_bottom = 10.0
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 30
text = "Name"

[node name="TextLabel" type="RichTextLabel" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 28
theme_override_font_sizes/italics_font_size = 28
bbcode_enabled = true
text = "Dialogue Text"

[node name="ChoicesContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ColorRectFlash" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)
