extends Control

@onready var bg = $Background
@onready var speaker_label = $DialoguePanel/SpeakerLabel
@onready var text_label = $DialoguePanel/TextLabel
@onready var choices_container = $ChoicesContainer
@onready var color_rect_flash = $ColorRectFlash

var current_scene_index = 0
var current_dialogue_index = 0

# Dialogue Data Structure
# {
#   "bg_color": Color,
#   "dialogue": [
#     {"speaker": "Name", "text": "Content", "effect": "flash_red", "is_thought": true},
#     ...
#   ],
#   "choices": [
#     {"text": "Choice 1", "next_scene": 1},
#     ...
#   ]
# }

var scenes = [
	{ # Scene 0: é »è‡¨å´©æ½°çš„é‚Šç·£
		"bg_color": Color(0.1, 0.1, 0.1), # Dark office
		"dialogue": [
			{"speaker": "ç³»çµ±æç¤º", "text": "è­¦å‘Šï¼šé«”åŠ› (HP) å‰©é¤˜ 5%ã€‚å£“åŠ› (SAN) é”åˆ° 92%ã€‚è‹¥é«”åŠ›æ­¸é›¶å°‡å¼·åˆ¶è§¸ç™¼ã€éå‹æ˜å€’ã€‘ã€‚", "system": true},
			{"speaker": "èª ä¸€", "text": "å‡Œæ™¨ä¸‰é»åŠã€‚è·é›¢ä¸‰åæ­²ç”Ÿæ—¥é‚„æœ‰å…©å¤©ã€‚", "is_thought": true},
			{"speaker": "èª ä¸€", "text": "æˆ‘å«èª ä¸€ï¼Œåœ¨ã€é‘«å‰µç³»çµ±æ•´åˆã€ç•¶äº†äº”å¹´çš„å…¨ç«¯å·¥ç¨‹å¸«ã€‚", "is_thought": true},
			{"speaker": "èª ä¸€", "text": "é€™äº”å¹´ä¾†ï¼Œæˆ‘çš„è–ªæ°´æ¼²å¹…è·Ÿçˆ¬è¡Œå‹•ç‰©å·®ä¸å¤šï¼Œä½†é«®éš›ç·šé€€å¾Œçš„é€Ÿåº¦å€’æ˜¯çªç ´äº†éŸ³éšœã€‚", "is_thought": true},
			{"speaker": "", "text": "(ç•«é¢é–ƒçˆç´…å…‰ï¼Œæ¨¡æ“¬æšˆçœ©æ„Ÿ)", "effect": "flash_red"},
			{"speaker": "èª ä¸€", "text": "Legacy Code (æ­·å²éºç•™ä»£ç¢¼) å°±åƒæ˜¯ä¸€åº§éš¨æ™‚æœƒçˆ†ç™¼çš„æ´»ç«å±±ã€‚è€Œæˆ‘ï¼Œå°±æ˜¯é‚£å€‹æ¯å¤©æ‹¿è‘—è† å¸¶è©¦åœ–æŠŠç«å±±å£å°èµ·ä¾†çš„ç™½ç—´ã€‚", "is_thought": true},
			{"speaker": "èª ä¸€", "text": "ä¸è¡Œäº†â€¦â€¦å†é€™æ¨£ä¸‹å»ï¼Œå°ˆæ¡ˆé‚„æ²’ä¸Šç·šï¼Œæˆ‘å°±å…ˆç™»å‡ºäº†ã€‚", "is_thought": true}
		],
		"choices": [
			{"text": "å›å®¶ç¡è¦ºï¼ˆæ‰£é™¤é€šå‹¤è²» $100ï¼Œå°ˆæ¡ˆé€²åº¦åœæ»¯ï¼‰", "next_scene": "go_home_fail"},
			{"text": "å»é™„è¿‘çš„ã€Œä¹å¤©ç„æ©Ÿå»Ÿã€æ‹œæ‹œï¼ˆæ¶ˆè€—é«”åŠ› 2ï¼Œæˆ–è¨±èƒ½æ”¹é‹ï¼Ÿï¼‰", "next_scene": 1}
		]
	},
	{ # Scene 1: ç§‘å­¸èˆ‡ç„å­¸çš„äº¤æœƒ
		"bg_color": Color(0.15, 0.1, 0.2), # Temple night
		"dialogue": [
			{"speaker": "èª ä¸€", "text": "ï¼ˆæ–æ–æ™ƒæ™ƒåœ°èµ°åˆ°ä¾›æ¡Œå‰ï¼Œå¾å¡‘è† è¢‹è£¡æ‹¿å‡ºä¸€åŒ…ç¶ è‰²ä¹–ä¹–ï¼‰\nç¥æ˜å¤§äººâ€¦â€¦ä¸ç®¡ä½ æ˜¯ç®¡å§»ç·£é‚„æ˜¯ç®¡è²¡å¯Œçš„ï¼Œæ‹œè¨—â€¦â€¦"},
			{"speaker": "èª ä¸€", "text": "ä¿ä½‘æ˜å¤©å®¢æˆ¶é©—æ”¶æ™‚ï¼Œé‚£å€‹ä¸çŸ¥åå ±éŒ¯ä¸è¦è·‘å‡ºä¾†â€¦â€¦åªè¦æ’éæ˜å¤©å°±å¥½â€¦â€¦"},
			{"speaker": "å»Ÿå…¬", "text": "å“ï¼Œå°‘å¹´æ¬¸ï¼Œé€™éº¼æ™šé‚„ä¾†æ‹œã€ç¢¼è¾²çœŸå›ã€å•Šï¼Ÿä½ è‡‰è‰²å¾ˆå·®å–”ï¼Œè¦ä¸è¦å–æ¯å£“é©šèŒ¶â€¦â€¦"},
			{"speaker": "èª ä¸€", "text": "è¬â€¦â€¦è¬è¬ï¼Œæˆ‘æ”¾å€‹ä¹–ä¹–å°±â€¦â€¦"},
			{"speaker": "ç³»çµ±æç¤º", "text": "é«”åŠ› (HP) æ­¸é›¶ã€‚", "system": true, "effect": "heartbeat"},
			{"speaker": "èª ä¸€", "text": "ç³Ÿç³•ï¼Œè¦–ç·šè®Šé»‘äº†â€¦â€¦", "is_thought": true},
			{"speaker": "", "text": "(æ²‰æ‚¶çš„æ’æ“Šè² â€”â€” ç”·ä¸»å€’åœ¨ä¾›æ¡Œå‰ï¼Œé ­æ’åˆ°é¦™çˆ)", "effect": "blackout"}
		],
		"choices": [] # Auto-advance to next scene
	},
	{ # Scene 2: 0èˆ‡1çš„å½¼å²¸
		"bg_color": Color(0, 0.2, 0), # Matrix green
		"dialogue": [
			{"speaker": "èª ä¸€", "text": "é€™è£¡æ˜¯â€¦â€¦æ€¥è¨ºå®¤ï¼Ÿä¸å°ï¼Œå“ªå®¶é†«é™¢çš„è£æ½¢é€™éº¼åƒé§­å®¢ä»»å‹™ï¼Ÿ"},
			{"speaker": "ç¢¼è¾²çœŸå›", "text": "å”‰ï¼Œåˆ Crashï¼ˆå´©æ½°ï¼‰äº†ä¸€å€‹ã€‚ç¾åœ¨çš„ç³»çµ±è² è¼‰é‡çœŸæ˜¯è¶Šä¾†è¶Šé›£æäº†ã€‚"},
			{"speaker": "èª ä¸€", "text": "ä½ â€¦â€¦ä½ æ˜¯èª°ï¼Ÿæ–°ä¾†çš„å¯¦ç¿’ç”Ÿå—ï¼Ÿ"},
			{"speaker": "ç¢¼è¾²çœŸå›", "text": "æ²’ç¦®è²Œï¼å¾ä¹ƒã€ä¹å¤©ç„æ©Ÿç¢¼è¾²çœŸå›ã€ï¼ŒæŒç®¡é€™ç‰‡åœŸåœ°ä¸Šæ‰€æœ‰ Server çš„ç©©å®šèˆ‡ Bug çš„æ¸¡åŒ–ã€‚ä½ å‰›å‰›æ‹¿ç¶ è‰²ä¹–ä¹–è³„è³‚æˆ‘ï¼Œæˆ‘é€™ä¸å°±ä¾†è™•ç†å®¢è¨´äº†å—ï¼Ÿ"},
			{"speaker": "èª ä¸€", "text": "ç¥æ˜ï¼Ÿç¥æ˜ç©¿æ ¼å­è¥¯è¡«ï¼Ÿç­‰ç­‰ï¼Œæ‰€ä»¥æˆ‘æ­»äº†å—ï¼Ÿéå‹æ­»ï¼Ÿ"},
			{"speaker": "ç¢¼è¾²çœŸå›", "text": "æ­»å€’æ˜¯æ²’æ­»ï¼Œåªæ˜¯ä½ çš„ã€å¤§è…¦è¨˜æ†¶é«”ã€æ»¿äº†ï¼Œæš«æ™‚ç•¶æ©Ÿé€²å…¥äº†é€™å€‹ä¸­ä»‹ç©ºé–“ã€‚\næˆ‘çœ‹äº†çœ‹ä½ çš„Logï¼ˆæ—¥èªŒï¼‰â€¦â€¦ä¸‰åæ­²ï¼Œå­˜æ¬¾ä¸åˆ°åè¬ï¼Œæ²’æœ‰å¥³æœ‹å‹ï¼Œæ¯å¤©è¢«PMè·Ÿå®¢æˆ¶æŠ˜ç£¨ã€‚é€™äººç”Ÿç°¡ç›´æ¯”å¯«å¾—æœ€çˆ›çš„éºµæ¢ä»£ç¢¼ï¼ˆSpaghetti Codeï¼‰é‚„è¦æ…˜å•Šï¼"},
			{"speaker": "èª ä¸€", "text": "â€¦â€¦é€£ç¥æ˜éƒ½è¦å˜²ç¬‘æˆ‘å—ï¼Ÿå¦‚æœå¯ä»¥é‡æ§‹ï¼ˆRefactorï¼‰æˆ‘çš„äººç”Ÿï¼Œæˆ‘ä¹Ÿä¸æƒ³é€™æ¨£å•Šã€‚"},
			{"speaker": "ç¢¼è¾²çœŸå›", "text": "é‡æ§‹ï¼Ÿå¥½è©ï¼å¾æœ€è¿‘æ­£æ„é€™ã€ç¾å¯¦ä¸–ç•Œã€çš„é‚è¼¯ Bug å¤ªå¤šï¼Œéœ€è¦ä¸€å€‹æœ‰ç¶“é©—çš„åº•å±¤å·¥ç¨‹å¸«å¹«å¿™ Debugã€‚\nçœ‹åœ¨ä½ é‚£åŒ…ç¶ è‰²ä¹–ä¹–çš„ä»½ä¸Šï¼Œæˆ‘çµ¦ä½ é–‹å€‹ã€å¾Œå°æ¬Šé™ã€å§ã€‚"},
			{"speaker": "", "text": "(ç•«é¢é–ƒçˆé‡‘é»ƒè‰²èˆ‡è—è‰²äº¤ç¹”çš„å…‰èŠ’)", "effect": "flash_gold_blue"},
			{"speaker": "ç¢¼è¾²çœŸå›", "text": "æˆ‘è³œäºˆä½ ã€ä¸­æ–·é»ï¼ˆBreakpointï¼‰ã€‘çš„æ¬Šé™ã€‚é‡åˆ°éä¸å»çš„åï¼Œå°±æŒ‰ä¸‹å»ã€‚è¨˜ä½ï¼Œé€™ä¸–ç•Œæ²’æœ‰è§£ä¸é–‹çš„ Bugï¼Œåªæœ‰ä¸å¤ é«˜çš„æ¬Šé™ï¼\nå¿«å›å»å§ï¼Œä½ çš„è‚‰é«”å¿«è¢«å»Ÿå…¬å«æ•‘è­·è»Šè¼‰èµ°äº†ï¼"}
		],
		"choices": []
	},
	{ # Scene 3: ä¸­æ–·é»ï¼Œå•Ÿå‹•
		"bg_color": Color(0.8, 0.8, 0.9), # Morning
		"dialogue": [
			{"speaker": "å»Ÿå…¬", "text": "å°‘å¹´æ¬¸ï¼å°‘å¹´æ¬¸ï¼ä½ é†’å•¦ï¼Ÿä½ æ˜¨æ™šåœ¨æˆ‘é€™ç¡äº†ä¸€å¤œæ¬¸ï¼Œé‚„å¥½æ²’äº‹ï¼"},
			{"speaker": "èª ä¸€", "text": "å˜¶â€¦â€¦é ­å¥½ç—›ã€‚æˆ‘æ˜¨æ™šâ€¦â€¦åšäº†ä¸€å€‹å¥½æ‰¯çš„å¤¢ã€‚"},
			{"speaker": "", "text": "ï¼ˆèª ä¸€ç«™èµ·èº«ï¼Œæ‹æ‹èº«ä¸Šçš„ç°å¡µï¼Œæ‰‹ä¼¸é€²å£è¢‹æ™‚ï¼Œæ‘¸åˆ°äº†ä¸€å€‹å†°å†·çš„ç¡¬ç‰©ã€‚ï¼‰"},
			{"speaker": "èª ä¸€", "text": "é€™æ˜¯ä»€éº¼ï¼Ÿ\nï¼ˆå¾å£è¢‹æ‹¿å‡ºä¸€å€‹å¸¶æœ‰ç´…è‰²åœ“é»æŒ‰éˆ•çš„éš¨èº«ç¢Ÿæ›é£¾ï¼Œä¸Šé¢åˆ»è‘—ã€Bug-Freeã€ï¼‰"},
			{"speaker": "èª ä¸€", "text": "æˆ‘åŸæœ¬æœ‰é€™å€‹æ±è¥¿å—ï¼Ÿç­‰ç­‰ï¼Œå¿«ä¹é»äº†ï¼ä»Šå¤©é•·å®˜è¦æŒ‡æ´¾æ–°å°ˆæ¡ˆï¼Œé²åˆ°å°±æ­»å®šäº†ï¼", "is_thought": true},
			{"speaker": "", "text": "(ç”·ä¸»æ€¥å¿™è½‰èº«ï¼Œå»ä¸å°å¿ƒæ’åˆ°äº†ä¸€å€‹è·¯éçš„å¥³å­¸ç”Ÿ/OLï¼Œæ‰‹ä¸Šçš„å’–å•¡çœ¼çœ‹å°±è¦æ½‘åˆ°ç”·ä¸»èº«ä¸Šï¼)"},
			{"speaker": "èª ä¸€", "text": "å•Šï¼å®Œè›‹â€”â€”\nï¼ˆæƒ…æ€¥ä¹‹ä¸‹ï¼Œèª ä¸€çš„æ‰‹æŒ‡ä¸‹æ„è­˜åœ°æŒ‰ä¸‹äº†é‚£å€‹ç´…è‰²æŒ‰éˆ•ï¼‰"},
			{"speaker": "", "text": "(é«˜é »çš„é›»å­æ»´ç­”è²ã€Œæ»´â€”â€”ã€\nä»¥ç”·ä¸»ç‚ºåœ“å¿ƒï¼Œä¸€é“è—è‰²çš„æ³¢ç´‹æƒéå…¨è¢å¹•ï¼Œä¸–ç•Œç¬é–“è®Šæˆç°éšã€‚)", "effect": "grayscale"},
			{"speaker": "èª ä¸€", "text": "â€¦â€¦æ¬¸ï¼Ÿå’–å•¡â€¦â€¦åœåœ¨åŠç©ºä¸­äº†ï¼Ÿè·¯äººä¹Ÿéƒ½ä¸å‹•äº†ï¼Ÿ\nï¼ˆç”·ä¸»å·¦å³å¼µæœ›ï¼Œç”¨æ‰‹æŒ‡è¼•è¼•æŠŠåœåœ¨åŠç©ºä¸­çš„ç†±å’–å•¡æ¨é–‹ï¼Œç„¶å¾Œè‡ªå·±å¾€æ—é‚Šèµ°äº†ä¸€æ­¥ã€‚ï¼‰"},
			{"speaker": "èª ä¸€", "text": "é‚£å€‹å¤¢â€¦â€¦é›£é“æ˜¯çœŸçš„ï¼Ÿæˆ‘çœŸçš„æ‹¿åˆ°äº†ç¾å¯¦ä¸–ç•Œçš„ç³»çµ±æ¬Šé™ï¼Ÿ"},
			{"speaker": "ç³»çµ±æç¤º", "text": "ã€èƒ½åŠ›è¦ºé†’ï¼šä¸­æ–·é» (Breakpoint)ã€‘\nâ–¶ ä½ å¯ä»¥åœ¨ä»»ä½•æ™‚å€™æŒ‰ä¸‹å³ä¸Šè§’çš„ [ğŸ”´ Debug] æŒ‰éˆ•æš«åœæ™‚é–“ã€‚\nâ–¶ åœ¨æ™‚åœæœŸé–“ï¼Œä½ å¯ä»¥é€²è¡Œç‰¹æ®Šäº’å‹•ã€‚\nâ–¶ æ³¨æ„ï¼šæ¯æ¬¡å•Ÿå‹•ä¸­æ–·é»ï¼Œå°‡å¤§é‡æ¶ˆè€—ä½ çš„ å£“åŠ› (SAN) å€¼ã€‚è‹¥ SAN å€¼é”åˆ° 100ï¼Œå°‡è§¸ç™¼ã€ç²¾ç¥å´©æ½°ã€‘ï¼", "system": true},
			{"speaker": "", "text": "(èª ä¸€å†æ¬¡æŒ‰ä¸‹æŒ‰éˆ•ï¼Œæ™‚é–“æ¢å¾©æµå‹•ï¼Œé¡è‰²æ¢å¾©\nå’–å•¡æ½‘ç‘åœ¨åŸæœ¬èª ä¸€ç«™ç«‹çš„ç©ºåœ°ä¸Š)", "effect": "restore_color"},
			{"speaker": "èª ä¸€", "text": "å‘µå‘µâ€¦â€¦å“ˆå“ˆå“ˆï¼æœ‰äº†é€™å€‹ï¼Œä»€éº¼æ­»äº¡å°ˆæ¡ˆã€ä»€éº¼é›£æçš„PMâ€¦â€¦\né€™ä¸€æ¬¡ï¼Œè¼ªåˆ°æˆ‘ä¾† Hack é€™å€‹ä¸–ç•Œäº†ï¼"}
		],
		"choices": [
			{"text": "é€²å…¥éŠæˆ² (Start Game)", "next_scene": "start_game"}
		]
	}
]

func _ready():
	load_scene(0)

func load_scene(index):
	current_scene_index = index
	current_dialogue_index = 0
	bg.color = scenes[index]["bg_color"]
	clear_choices()
	show_dialogue()

func show_dialogue():
	var scene = scenes[current_scene_index]
	var dialogues = scene["dialogue"]
	
	if current_dialogue_index < dialogues.size():
		var line_data = dialogues[current_dialogue_index]
		
		# Set Speaker
		if line_data["speaker"] == "":
			speaker_label.text = ""
			speaker_label.visible = false
		else:
			speaker_label.text = line_data["speaker"]
			speaker_label.visible = true
			
			if line_data.has("system") and line_data["system"]:
				speaker_label.add_theme_color_override("font_color", Color(1, 0.2, 0.2)) # Red for system
			else:
				speaker_label.remove_theme_color_override("font_color")

		# Set Text
		var display_text = line_data["text"]
		if line_data.has("is_thought") and line_data["is_thought"]:
			text_label.text = "[i]" + display_text + "[/i]"
			text_label.add_theme_color_override("default_color", Color(0.7, 0.7, 1.0)) # Light blue for thoughts
		else:
			text_label.text = display_text
			text_label.remove_theme_color_override("default_color")
			
		# Handle Effects
		if line_data.has("effect"):
			trigger_effect(line_data["effect"])
			
	else:
		show_choices()

func trigger_effect(effect_name):
	match effect_name:
		"flash_red":
			flash_screen(Color(1, 0, 0, 0.5))
		"flash_gold_blue":
			flash_screen(Color(0.8, 0.8, 0.2, 0.5))
		"blackout":
			bg.color = Color.BLACK
		"grayscale":
			bg.material = CanvasItemMaterial.new()
			# Ideally a proper shader for grayscale, but setting modulate to gray for now
			bg.modulate = Color(0.5, 0.5, 0.5) 
		"restore_color":
			bg.modulate = Color(1, 1, 1)

func flash_screen(color: Color):
	color_rect_flash.color = color
	var tween = create_tween()
	tween.tween_property(color_rect_flash, "color:a", 0.0, 0.5)

func _input(event):
	if event.is_action_pressed("ui_accept") or (event is InputEventMouseButton and event.pressed and event.button_index == MOUSE_BUTTON_LEFT):
		var scene = scenes[current_scene_index]
		if current_dialogue_index < scene["dialogue"].size():
			current_dialogue_index += 1
			if current_dialogue_index < scene["dialogue"].size():
				show_dialogue()
			else:
				show_choices()
				
				# Auto-advance if no choices
				if scene["choices"].size() == 0:
					if current_scene_index < scenes.size() - 1:
						load_scene(current_scene_index + 1)
					else:
						start_main_game()

func show_choices():
	clear_choices()
	var choices = scenes[current_scene_index]["choices"]
	for choice in choices:
		var btn = Button.new()
		btn.text = choice["text"]
		btn.custom_minimum_size = Vector2(400, 60)
		btn.add_theme_font_size_override("font_size", 20)
		btn.pressed.connect(_on_choice_made.bind(choice["next_scene"]))
		choices_container.add_child(btn)
		
	if choices.size() > 0:
		choices_container.visible = true

func clear_choices():
	choices_container.visible = false
	for child in choices_container.get_children():
		child.queue_free()

func _on_choice_made(next_scene):
	if str(next_scene) == "start_game":
		start_main_game()
	elif str(next_scene) == "go_home_fail":
		# Add a minor fail state dialogue if needed, or just force them to the temple
		scenes[0]["dialogue"].append({"speaker": "èª ä¸€", "text": "ä¸è¡Œ... æ˜å¤©è¦äº¤ä»¶äº†ï¼Œæˆ‘é‚„æ˜¯å»æ‹œæ‹œæ±‚å€‹å¿ƒå®‰å§ã€‚"})
		current_dialogue_index = scenes[0]["dialogue"].size() - 1
		show_dialogue()
	else:
		load_scene(next_scene)

func start_main_game():
	get_tree().change_scene_to_file("res://scenes/MainScene.tscn")
